# skynet

./: Cargo.toml  colab.sh  run.sh
code_test_data/: labels.json
dataset/raw_samples/: labelbox.json
dataset/test/: labels.json
dataset/train/: labels.json
labelbox_dataset/test/: labels.json
labelbox_dataset/train/: labels.json
mnist/src/: main.rs
processed_imgs/: labels.json
samples/: export.json
src/: dataset.rs  lib.rs  main.rs  main2.rs  preprocessing.rs  yolo.rs  yolo_nn.rs
src/dataset/: common_structs.rs  data_augmenters.rs  data_loaders.rs  data_transformers.rs  iterator_adapters.rs
src/dataset/data_augmenters/: image_augmentations.rs
src/dataset/data_loaders/: yolo_dataset_loader.rs
src/dataset/data_transformers/: bbox_conversion.rs  coco_dataset.rs  img2tensor.rs  labelbox.rs  labelbox2simple_bb.rs  labelbox_structs.rs
src/dataset/data_transformers/coco_dataset/: coco2simple_bb.rs  coco_dataset_struct.rs
src/dataset/data_transformers/labelbox/: labelbox2simple_bb.rs  labelbox_structs.rs
src/dataset/iterator_adapters/: batching.rs  shuffling.rs
src/preprocessing/: augmentation.rs  bbox_conversion.rs  dataset.rs  structs.rs
src/preprocessing/dataset/: yolo_dataset_loader.rs
src/yolo/: network.rs
src/yolo_nn/: helpers.rs  network.rs  yolo_bbox_conversion.rs  yolo_loss.rs
src/yolo_nn/helpers/: bb.rs  img_drawing.rs
src/yolo_nn/network/: micro_network.rs  original_yolo.rs
src/yolo_nn/network/original_yolo/: config.rs  config_file_parsing.rs
yolo_original/yolo/: postprocessing.rs
