[package]
name = "skynet"
version = "0.1.0"
authors = ["tiberiodarferreira"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#tch = {path = "../tch-rs"}
tch = {git = "https://github.com/tiberiusferreira/tch-rs.git", branch="rustic_wrappers"}
failure = "0.1.6"
rand = "0.7.2"

# For preprocessing
serde = { version = "1.0", features = ["derive"] }
image = "0.22.3"
imageproc = "0.19.2"
serde_json = "1.0.44"
itertools = "0.8.2"
surf = "1.0.3"
futures = "0.3.1"
[dependencies.async-std]
version = "1.4.0"
features = ["attributes"]
[[bin]]
name = "yolo_trainer"
path = "src/bin/yolo_trainer.rs"

[[bin]]
name = "labelbox2simplebb"
path = "src/bin/labelbox2simplebb.rs"